feat(root): updates lint-staged check

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx,json,md}": [
+    "*.{ts,json,md}": [
       "pnpm lint"
     ],
     "*.{ts,tsx}": [
