Fix gh action (#471)
* fix(root): fixes gh action

* fix(root): whoopsie; removes lock block

* fix(root): fixes build

--- a/package.json
+++ b/package.json
@@ -37,14 +37,13 @@
     "minimist": "^1.2.6"
   },
   "scripts": {
-    "build": "pnpm clean:dist && pnpm build:dist",
-    "build:dist": "pnpm -r build",
-    "clean:dist": "pnpm -r clean",
+    "build": "pnpm -r clean && pnpm -r build",
     "ci": "run-s lint:ci test:ci",
     "commit-msg": "commitlint --edit $1",
     "lint": "pnpm lint:cmd --fix",
     "lint:ci": "pnpm lint:cmd",
     "lint:cmd": "eslint . --ext '.ts'",
+    "lint-staged": "npx lint-staged",
     "test": "pnpm test:cmd",
     "test:ci": "pnpm test:cmd --ci",
     "test:cmd": "jest --maxWorkers=4 --noStackTrace --collectCoverage=true",
