--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-lerna-scopes": "^16.0.0",
     "@commitlint/prompt": "^16.0.0",
+    "@common-utilities/new-pkg": "file:./packages/new-pkg/dist",
     "@swc/core": "^1.2.175",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.0.0",
