--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
           cache: 'pnpm'
       # --no-frozen-lockfile is required so that dependabot with automerge can work
       # https://github.com/dependabot/dependabot-core/issues/1736
-      - run: pnpm install --no-frozen-lockfile
+      - run: pnpm install -r --no-frozen-lockfile
       - run: pnpm build
       - run: pnpm test
         env:
