fix(root): tweaks

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Common utilities for javascript development 🧰",
   "repository": "git@github.com:yowainwright/common-utilities.git",
-  "author": "Jeff Wainwright <yowainwright@gmail.com>",
+  "author": "Jeff Wainwright <yowainwright@gmail.com> (https://jeffry.in)",
   "license": "MIT",
   "main": "README.md",
   "private": true,
@@ -14,7 +14,7 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-lerna-scopes": "^17.0.0",
     "@commitlint/prompt": "^17.0.0",
-    "@common-utilities/new-pkg": "file:./packages/new-pkg",
+    "@common-utilities/new-pkg": "workspace:*",
     "@swc/core": "^1.2.175",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^29.0.0",
