--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "license": "MIT",
   "main": "README.md",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-lerna-scopes": "^17.0.0",
@@ -21,6 +18,7 @@
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
+    "codependence": "^0.2.6",
     "commitizen": "^4.0.3",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
@@ -29,6 +27,7 @@
     "lint-staged": "^13.0.0",
     "prettier": "^2.0.2",
     "rimraf": "^4.0.4",
+    "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.0.0",
     "tslib": "^2.3.1",
     "tsutils": "^3.21.0",
