--- a/packages/new-pkg/package.json
+++ b/packages/new-pkg/package.json
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.0",
-    "@types/inquirer": "^9.0.0",
-    "ts-node": "^10.7.0"
+    "@types/inquirer": "^9.0.0"
   }
 }
