--- a/package.json
+++ b/package.json
@@ -7,32 +7,31 @@
   "license": "MIT",
   "main": "README.md",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-lerna-scopes": "^17.0.0",
-    "@commitlint/prompt": "^17.0.0",
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-lerna-scopes": "17.4.2",
+    "@commitlint/prompt": "17.4.2",
     "@common-utilities/new-pkg": "workspace:*",
     "@swc/core": "^1.2.175",
-    "@swc/jest": "^0.2.20",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "commitizen": "^4.0.3",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^7.0.0",
-    "jest": "^29.0.0",
-    "lint-staged": "^13.0.0",
-    "prettier": "^2.0.2",
-    "rimraf": "^4.0.4",
-    "tsconfig-paths": "^4.0.0",
-    "tslib": "^2.3.1",
+    "@swc/jest": "0.2.24",
+    "@types/jest": "29.4.0",
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
+    "codependence": "^0.2.6",
+    "commitizen": "4.3.0",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "husky": "8.0.3",
+    "jest": "29.4.0",
+    "lint-staged": "13.1.0",
+    "prettier": "2.8.3",
+    "rimraf": "4.1.2",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.2",
+    "tslib": "2.4.1",
     "tsutils": "^3.21.0",
-    "typescript": "^4.6.3"
+    "typescript": "4.9.4"
   },
   "resolutions": {
     "minimist": "^1.2.6"
@@ -53,7 +52,8 @@
     "commit:retry": "git-cz --retry",
     "commitmsg": "commitlint -e",
     "deploy": "pnpm build && pnpm -r publish",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "update": "codependence --update"
   },
   "config": {
     "commitizen": {
