fix(root): adds snake-to-camel-case docs

--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
           "throttle",
           "trim-whitespace",
           "wait-until-defined",
-          "rot13"
+          "rot13",
+          "snake-to-camel-string"
         ]
       ],
       "type-enum": [
