--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "2.8.3",
     "rimraf": "4.1.2",
     "ts-node": "10.9.1",
+    "ts-toolbelt": "^9.6.0",
     "tsconfig-paths": "4.1.2",
     "tslib": "2.4.1",
     "tsutils": "^3.21.0",
