fix: adds script

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "restricted",
   "baseBranch": "master",
   "updateInternalDependencies": "patch",
-  "ignore": ["@goodrx/new-pkg"]
+  "ignore": ["@common-utilities/new-pkg"]
 }
