fix(root): makes package public

--- a/packages/curry/package.json
+++ b/packages/curry/package.json
@@ -6,7 +6,9 @@
   "files": [
     "dist"
   ],
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
