--- a/package.json
+++ b/package.json
@@ -16,30 +16,32 @@
     "@swc/core": "^1.2.175",
     "@swc/jest": "0.2.24",
     "@types/jest": "29.5.0",
-    "@types/node": "18.15.7",
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
+    "@types/node": "18.15.10",
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
     "codependence": "^0.2.6",
     "commitizen": "4.3.0",
     "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
+    "eslint-config-prettier": "8.8.0",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "lint-staged": "13.2.0",
-    "prettier": "2.8.6",
+    "prettier": "2.8.7",
     "rimraf": "4.4.1",
     "ts-node": "10.9.1",
     "ts-toolbelt": "^9.6.0",
     "tsconfig-paths": "4.1.2",
     "tslib": "2.5.0",
     "tsutils": "^3.21.0",
+    "turbo": "^1.8.5",
+    "type-fest": "^3.7.1",
     "typescript": "5.0.2"
   },
   "resolutions": {
     "minimist": "^1.2.6"
   },
   "scripts": {
-    "build": "pnpm -r clean && pnpm -r build",
+    "build": "turbo run clean && turbo run build",
     "create-pkg": "node node_modules/@common-utilities/new-pkg/dist",
     "ci": "run-s lint:ci test:ci",
     "commit-msg": "commitlint --edit $1",
