--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: update codependencies
 
 on:
   schedule:
-    - cron: "0 5 * * 2"
+    - cron: '0 5 * * 2'
 
 jobs:
   udpate-deps:
@@ -10,28 +10,28 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2.4.0
         with:
           version: latest
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "pnpm"
+          cache: 'pnpm'
       - run: pnpm install --no-frozen-lockfile
       - run: pnpm build
       - run: pnpm run update
       - run: pnpm install --no-frozen-lockfile
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.PR_CREATE_TOKEN }}
           commit-message: Update dependencies
-          title: "[Codependence]  update dependencies"
+          title: '[Codependence]  update dependencies'
           body: |
             ## Dependency updates
 
