--- a/packages/new-pkg/tsconfig.json
+++ b/packages/new-pkg/tsconfig.json
@@ -2,7 +2,11 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./dist",
-		"rootDir": "src"
+		"rootDir": "src",
+		"module": "ESNext",
+		"target": "ES2022",
+		"lib": ["ES2022", "DOM"],
+		"moduleResolution": "node"
 	},
 	"exclude": ["pkg/**", "src/*.test.ts", "*.js"],
 	"include": ["src"]
