--- a/packages/update-markdown-list/tsconfig.json
+++ b/packages/update-markdown-list/tsconfig.json
@@ -1,8 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "src"
-  },
-  "include": ["src"]
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"outDir": "./dist",
+		"rootDir": "src",
+		"module": "ESNext",
+		"target": "ES2022",
+		"lib": ["ES2022", "DOM"],
+		"moduleResolution": "node"
+	},
+	"include": ["src"]
 }
