--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "private": true,
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@commitlint/cli": "19.2.1",
-    "@commitlint/config-lerna-scopes": "19.0.0",
-    "@commitlint/prompt": "19.2.0",
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/format": "^19.3.0",
+    "@commitlint/prompt": "19.3.0",
     "@common-utilities/new-pkg": "workspace:*",
-    "@swc/core": "^1.3.105",
+    "@eslint/js": "^9.1.1",
+    "@swc/core": "^1.5.0",
     "@swc/jest": "0.2.36",
     "@types/jest": "29.5.12",
-    "@types/node": "20.11.30",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
-    "codependence": "^0.2.6",
+    "@types/node": "20.12.7",
+    "codependence": "^0.3.0",
     "commitizen": "4.3.0",
-    "eslint": "8.57.0",
+    "eslint": "9.1.1",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "9.0.11",
     "jest": "29.7.0",
     "lint-staged": "15.2.2",
@@ -33,9 +34,10 @@
     "tsconfig-paths": "4.2.0",
     "tslib": "2.6.2",
     "tsutils": "^3.21.0",
-    "turbo": "^1.11.3",
-    "type-fest": "^4.9.0",
-    "typescript": "5.4.3"
+    "turbo": "^1.13.2",
+    "type-fest": "^4.17.0",
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.7.1"
   },
   "resolutions": {
     "minimist": "^1.2.6"
@@ -47,7 +49,7 @@
     "commit-msg": "commitlint --edit $1",
     "lint": "pnpm lint:cmd --fix",
     "lint:ci": "pnpm lint:cmd",
-    "lint:cmd": "eslint . --ext '.ts'",
+    "lint:cmd": "eslint",
     "lint-staged": "npx lint-staged",
     "test": "pnpm test:cmd",
     "test:ci": "pnpm test:cmd --ci",
@@ -57,20 +59,15 @@
     "commitmsg": "commitlint -e",
     "deploy": "pnpm build && pnpm -r publish",
     "prepublishOnly": "pnpm build",
-    "prepare": "husky install",
+    "prepare": "husky",
     "release-prep": "changeset",
     "release-bumps": "changeset version",
     "release-packages": "pnpm prepublishOnly && changeset publish && git push --follow-tags",
     "update": "codependence --update"
   },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/@commitlint/prompt"
-    }
-  },
   "commitlint": {
     "extends": [
-      "@commitlint/config-lerna-scopes"
+      "@commitlint/config-conventional"
     ],
     "rules": {
       "header-max-length": [
