chore: updates commit msg

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,7 +30,7 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.PR_CREATE_TOKEN }}
-          commit-message: Update dependencies
+          commit-message: 'chore: update dependencies'
           title: '[Codependence]  update dependencies'
           body: |
             ## Dependency updates
